--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,9 +1,10 @@
 ---
 # This playbook deploys a simple standalone Tomcat 7 server. 
 
-- hosts: tomcat-servers 
+- hosts: tomcat-servers
   user: root
 
   roles:
+    - common
     - tomcat
     - dniprorada-java
