--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,27 +1,10 @@
 ---
-# Add specified repository into sources list.
-# - name: enable backports repo
-#   apt_repository: repo='deb http://httpredir.debian.org/debian jessie-backports main' state=present filename='jessie-backports'
-- name: install base utils (mc, nano)
+- name: install git
   apt: name={{ item }} state=latest update_cache=yes cache_valid_time=3600
   with_items:
-  - mc
-  - bsdutils
-  - less
-  - nano
-  - bash-completion
-  - openssl
-  - ca-certificates
-  - ntp
-  - locales
-  - vim
   - git
-  - curl
   tags:
-    - base_utils
-  
-- name: set mcedit by default editor
-  shell: update-alternatives --set editor /usr/bin/mcedit
-  tags:
-    - editor
-    - defaults
+    - install_git
+
+- name: get repo 
+  git: repo=https://github.com/e-government-ua/i.git dest=/project version=test
