--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,7 @@ script:
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
+  slack:
+    on_success: always
+  email:
+    on_success: never
