--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,7 +6,7 @@ galaxy_info:
 
   issue_tracker_url: https://github.com/e-government-ua/vagrant/issues
 
-  license: CC-BY
+  license: AGPL-3.0+
 
   min_ansible_version: 1.2
 
