--- a/ansible/roles/wf-region-java/tasks/main.yml
+++ b/ansible/roles/wf-region-java/tasks/main.yml
@@ -4,12 +4,18 @@
   args:
     chdir: /project/wf-region
 
-- name: Building workflow project
-  async: 1000
-  poll: 0
-  command: /usr/bin/mvn tomcat7:run-war -DskipTests
+- name: Build workflow project
+  command: /usr/bin/mvn package -DskipTests
   args:
     chdir: /project/wf-region
 
-- name: wait for tomcat to start
-  wait_for: port={{region_http_port}}
+- name: Deploy artifact to tomcat
+  command: curl -s --upload-file /project/wf-region/target/wf-region.war "http://{{ tomcat_user }}:{{ tomcat_pass }}@127.0.0.1:{{ tomcat_port | default(8080) }}/manager/text/deploy?path=/wf-region&update=true"
+  register: curl_output
+
+
+- name: Fail playbook if deployment failed
+  fail: msg="Deployment failed"
+  when: "item.stdout is defined and 'FAIL' in item.stdout"
+  with_items:
+    - "{{ curl_output.results }}"
